--- a/k8s.ingress.dev.yaml
+++ b/k8s.ingress.dev.yaml
@@ -1,13 +1,10 @@
+# k8s.ingress.dev.yaml
 apiVersion: extensions/v1beta1
 kind: Ingress
 metadata:
   name: my-ingress
   annotations:
     kubernetes.io/ingress.class: nginx
-    nginx.ingress.kubernetes.io/proxy-body-size: 50m
-    nginx.ingress.kubernetes.io/proxy-connect-timeout: "600"
-    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
-    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
 spec:
   tls: # for https
     - hosts:
